// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ts-jest logging TS_JEST_LOG should pass and create log file when using template "default" 1`] = `
Array [
  "[level:20] creating jest presets not handling JavaScript files",
  "[level:20] creating Importer singleton",
  "[level:20] creating jest presets not handling JavaScript files",
  "[level:20] checking version of jest: OK",
  "[level:20] created new transformer",
  "[level:20] computing cache key for <cwd>/Hello.spec.ts",
  "[level:30] no matching config-set found, creating a new one",
  "[level:20] backporting config",
  "[level:20] normalized jest config",
  "[level:20] normalized ts-jest config",
  "[level:20] babel is disabled",
  "[level:20] loaded module typescript",
  "[level:20] patching typescript",
  "[level:20] checking version of typescript: OK",
  "[level:20] readTsConfig(): reading <cwd>/tsconfig.json",
  "[level:20] normalized typescript config",
  "[level:20] processing <cwd>/Hello.spec.ts",
  "[level:20] initializeLanguageServiceInstance(): create typescript compiler",
  "[level:20] file caching disabled",
  "[level:20] initializeLanguageServiceInstance(): creating language service",
  "[level:20] compileAndUpdateOutput(): get compile output",
  "[level:20] compileFn(): compiling using language service",
  "[level:20] updateMemoryCache(): update memory cache for language service",
  "[level:20] visitSourceFileNode(): hoisting",
  "[level:20] compileFn(): computing diagnostics using language service",
  "[level:20] computing cache key for <cwd>/Hello.ts",
  "[level:20] processing <cwd>/Hello.ts",
  "[level:20] compileAndUpdateOutput(): get compile output",
  "[level:20] compileFn(): compiling using language service",
  "[level:20] updateMemoryCache(): update memory cache for language service",
  "[level:20] visitSourceFileNode(): hoisting",
  "[level:20] compileFn(): computing diagnostics using language service",
]
`;

exports[`ts-jest logging TS_JEST_LOG should pass and create log file when using template "with-babel-7" 1`] = `
Array [
  "[level:20] creating jest presets not handling JavaScript files",
  "[level:20] creating Importer singleton",
  "[level:20] creating jest presets not handling JavaScript files",
  "[level:20] checking version of jest: OK",
  "[level:20] created new transformer",
  "[level:20] computing cache key for <cwd>/Hello.spec.ts",
  "[level:30] no matching config-set found, creating a new one",
  "[level:20] backporting config",
  "[level:20] normalized jest config",
  "[level:20] normalized ts-jest config",
  "[level:20] normalized babel config via ts-jest option",
  "[level:20] loaded module typescript",
  "[level:20] patching typescript",
  "[level:20] checking version of typescript: OK",
  "[level:20] readTsConfig(): reading <cwd>/tsconfig.json",
  "[level:20] normalized typescript config",
  "[level:20] processing <cwd>/Hello.spec.ts",
  "[level:20] creating babel-jest transformer",
  "[level:20] loaded module babel-jest",
  "[level:20] patching babel-jest",
  "[level:20] checking version of babel-jest: OK",
  "[level:20] initializeLanguageServiceInstance(): create typescript compiler",
  "[level:20] file caching disabled",
  "[level:20] initializeLanguageServiceInstance(): creating language service",
  "[level:20] compileAndUpdateOutput(): get compile output",
  "[level:20] compileFn(): compiling using language service",
  "[level:20] updateMemoryCache(): update memory cache for language service",
  "[level:20] visitSourceFileNode(): hoisting",
  "[level:20] compileFn(): computing diagnostics using language service",
  "[level:20] calling babel-jest processor",
  "[level:20] computing cache key for <cwd>/Hello.ts",
  "[level:20] processing <cwd>/Hello.ts",
  "[level:20] compileAndUpdateOutput(): get compile output",
  "[level:20] compileFn(): compiling using language service",
  "[level:20] updateMemoryCache(): update memory cache for language service",
  "[level:20] visitSourceFileNode(): hoisting",
  "[level:20] compileFn(): computing diagnostics using language service",
  "[level:20] calling babel-jest processor",
]
`;

exports[`ts-jest logging TS_JEST_LOG should pass and create log file when using template "with-babel-7-string-config" 1`] = `
Array [
  "[level:20] creating jest presets not handling JavaScript files",
  "[level:20] creating Importer singleton",
  "[level:20] creating jest presets not handling JavaScript files",
  "[level:20] checking version of jest: OK",
  "[level:20] created new transformer",
  "[level:20] computing cache key for <cwd>/Hello.spec.ts",
  "[level:30] no matching config-set found, creating a new one",
  "[level:20] backporting config",
  "[level:20] normalized jest config",
  "[level:20] resolved path from babel.config.js to <cwd>/babel.config.js",
  "[level:20] normalized ts-jest config",
  "[level:20] normalized babel config via ts-jest option",
  "[level:20] loaded module typescript",
  "[level:20] patching typescript",
  "[level:20] checking version of typescript: OK",
  "[level:20] readTsConfig(): reading <cwd>/tsconfig.json",
  "[level:20] normalized typescript config",
  "[level:20] processing <cwd>/Hello.spec.ts",
  "[level:20] creating babel-jest transformer",
  "[level:20] loaded module babel-jest",
  "[level:20] patching babel-jest",
  "[level:20] checking version of babel-jest: OK",
  "[level:20] initializeLanguageServiceInstance(): create typescript compiler",
  "[level:20] file caching disabled",
  "[level:20] initializeLanguageServiceInstance(): creating language service",
  "[level:20] compileAndUpdateOutput(): get compile output",
  "[level:20] compileFn(): compiling using language service",
  "[level:20] updateMemoryCache(): update memory cache for language service",
  "[level:20] visitSourceFileNode(): hoisting",
  "[level:20] compileFn(): computing diagnostics using language service",
  "[level:20] calling babel-jest processor",
  "[level:20] computing cache key for <cwd>/Hello.ts",
  "[level:20] processing <cwd>/Hello.ts",
  "[level:20] compileAndUpdateOutput(): get compile output",
  "[level:20] compileFn(): compiling using language service",
  "[level:20] updateMemoryCache(): update memory cache for language service",
  "[level:20] visitSourceFileNode(): hoisting",
  "[level:20] compileFn(): computing diagnostics using language service",
  "[level:20] calling babel-jest processor",
]
`;

exports[`ts-jest logging deprecation warning with astTransformers config as an object should pass using template "default" 1`] = `
  √ jest
  ↳ exit code: 0
  ===[ STDOUT ]===================================================================
  
  ===[ STDERR ]===================================================================
  PASS ./Hello.spec.ts
    Hello Class
      √ should create a new Hello
  
  Test Suites: 1 passed, 1 total
  Tests:       1 passed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`ts-jest logging deprecation warning with astTransformers config as an object should pass using template "with-babel-7" 1`] = `
  √ jest
  ↳ exit code: 0
  ===[ STDOUT ]===================================================================
  
  ===[ STDERR ]===================================================================
  PASS ./Hello.spec.ts
    Hello Class
      √ should create a new Hello
  
  Test Suites: 1 passed, 1 total
  Tests:       1 passed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`ts-jest logging deprecation warning with astTransformers config as an object should pass using template "with-babel-7-string-config" 1`] = `
  √ jest
  ↳ exit code: 0
  ===[ STDOUT ]===================================================================
  
  ===[ STDERR ]===================================================================
  PASS ./Hello.spec.ts
    Hello Class
      √ should create a new Hello
  
  Test Suites: 1 passed, 1 total
  Tests:       1 passed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`ts-jest logging deprecation warning with astTransformers config as string array should pass using template "default" 1`] = `
  √ jest
  ↳ exit code: 0
  ===[ STDOUT ]===================================================================
  
  ===[ STDERR ]===================================================================
  ts-jest[config] (WARN) The configuration for astTransformers as string[] is deprecated and will be removed in ts-jest 27. Please define your custom AST transformers in a form of an object. More information you can check online documentation https://kulshekhar.github.io/ts-jest/user/config/astTransformers
  PASS ./Hello.spec.ts
    Hello Class
      √ should create a new Hello
  
  Test Suites: 1 passed, 1 total
  Tests:       1 passed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`ts-jest logging deprecation warning with astTransformers config as string array should pass using template "with-babel-7" 1`] = `
  √ jest
  ↳ exit code: 0
  ===[ STDOUT ]===================================================================
  
  ===[ STDERR ]===================================================================
  ts-jest[config] (WARN) The configuration for astTransformers as string[] is deprecated and will be removed in ts-jest 27. Please define your custom AST transformers in a form of an object. More information you can check online documentation https://kulshekhar.github.io/ts-jest/user/config/astTransformers
  PASS ./Hello.spec.ts
    Hello Class
      √ should create a new Hello
  
  Test Suites: 1 passed, 1 total
  Tests:       1 passed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`ts-jest logging deprecation warning with astTransformers config as string array should pass using template "with-babel-7-string-config" 1`] = `
  √ jest
  ↳ exit code: 0
  ===[ STDOUT ]===================================================================
  
  ===[ STDERR ]===================================================================
  ts-jest[config] (WARN) The configuration for astTransformers as string[] is deprecated and will be removed in ts-jest 27. Please define your custom AST transformers in a form of an object. More information you can check online documentation https://kulshekhar.github.io/ts-jest/user/config/astTransformers
  PASS ./Hello.spec.ts
    Hello Class
      √ should create a new Hello
  
  Test Suites: 1 passed, 1 total
  Tests:       1 passed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`ts-jest logging with unsupported version test with TS_JEST_DISABLE_VER_CHECKER is not set in process.env should pass using template "with-unsupported-version" 1`] = `
  √ jest
  ↳ exit code: 0
  ===[ STDOUT ]===================================================================
  
  ===[ STDERR ]===================================================================
  ts-jest[versions] (WARN) Version 3.3.4000 of typescript installed has not been tested with ts-jest. If you're experiencing issues, consider using a supported version (>=3.8.0 <4.0.0-0). Please do not report issues in ts-jest if you are using unsupported versions.
  PASS ./Hello.spec.ts
    Hello Class
      √ should create a new Hello
  
  Test Suites: 1 passed, 1 total
  Tests:       1 passed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`ts-jest logging with unsupported version test with TS_JEST_DISABLE_VER_CHECKER is set in process.env should pass using template "with-unsupported-version" 1`] = `
  √ jest
  ↳ exit code: 0
  ===[ STDOUT ]===================================================================
  
  ===[ STDERR ]===================================================================
  PASS ./Hello.spec.ts
    Hello Class
      √ should create a new Hello
  
  Test Suites: 1 passed, 1 total
  Tests:       1 passed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;
